Fix scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -11,16 +11,20 @@
 	src: url("../fonts/Lato-LightItalic.ttf");
 }
 :root {
-    /* --blue: #1e90ff; /* color: var(--blue); */
-	/*
-	rgba(255, 255, 255, 0.6);
-	rgba(0, 0, 0, 0.6);
-	*/
 	--black: #1A1A1A;
 	--gray: #E5E5E5;
 	--blue: #2196F3;
 	--red: #F44336;
 	--white: #FFFFFF;
+}
+::-webkit-scrollbar {
+	width: 10px;
+}
+::-webkit-scrollbar-track {
+	background: var(--black);
+}
+::-webkit-scrollbar-thumb {
+	background: var(--blue);
 }
 * {
 	margin: 0px;
@@ -36,7 +40,7 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-	/* background-attachment: fixed; */
+	background-attachment: fixed;
 }
 #overlay {
 	width: 100%;
@@ -49,6 +53,8 @@ body {
 	width: 100%;
 	height: 100px;
 	position: fixed;
+	top: 0;
+	left: 0;
 }
 #hero-header-overlay {
 	width: 100%;
@@ -155,7 +161,6 @@ body {
 	text-align: center;
 	padding: 30px 20px;
 	background-color: var(--white);
-	/* outline: 1px solid var(--red); */
 	border-right: 1px solid var(--red);
 }
 .no-border-right {
@@ -293,7 +298,6 @@ footer {
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
-	
 	background-color: var(--white);
 	padding-bottom: 10px;
 }
@@ -608,7 +612,6 @@ footer {
 #contact-map-holder iframe {
 	width: 100%;
 }
-
 @media only screen and (max-width: 1024px) {
 	#hero-header-overlay {
 		flex-direction: column;
@@ -750,7 +753,4 @@ footer {
 	#button {
 		width: 100%;
 	}
-}
-@media only screen and (max-width: 480px) {
-	
 }
